# jgze

./: .markdownlint.yaml  CHANGELOG.md  Cargo.toml  DEVELOP.md  LICENSE  README.md
.github/: CODEOWNERS
.github/workflows/: release.yaml
src/: main.rs
testdata/test_compact/: test_compact_.json
testdata/test_jsonl/: test_jsonl_.jsonl
testdata/test_pretty/: test_pretty_.json
