[package]
name = "jgze"
version = "1.0.0"
edition = "2021"
authors = ["Yuki Yoshida <hm.hr.yossy@gmail.com>"]
description = "A tool for editing gzipped JSON files directly"
license = "MIT"
repository = "https://github.com/teihenn/jgze"
keywords = ["json", "gzip", "editor", "cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
tempfile = "3.10"
anyhow = "1.0"
